자원 절약 및 편의 기능 업데이트
- 캠 있는 뷰 따로 켜두지 않아도 탐지 데이터 로드 가능
- 데모 맵 뷰의 캠은 탐지 기능 없음
- 데모 맵 뷰에서 GPS 마크를 누르면 홈으로 이동
- 기타 자잘한 디버깅

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,5 +38,19 @@
         <a href="/area_view">Person Area Ratio</a>
         <a href="/map_view">demo map view</a>
     </div>
+    <script>
+        async function fetchRatioData() {
+            try {
+                const response = await fetch("/detection_data_feed");
+                const data = await response.json();
+                console.log("status code: " + data.ratio_code);
+            } catch (error) {
+                console.error("Error fetching ratio data:", error);
+            }
+        }
+
+        // 주기적으로 서버에서 텍스트 데이터 가져오기
+        setInterval(fetchRatioData, 1000); // 1초마다 호출
+    </script>
 </body>
 </html>
