--- a/templates/map_view.html
+++ b/templates/map_view.html
@@ -72,7 +72,9 @@
                 </div>
             </div>
         </div>
-        <div class="gpsmark"></div>
+        <a href="/">
+            <div class="gpsmark"></div>
+        </a>
         <div id= "toilets" class="toilets">
             <div class="toilet" style="top: 352px; left: 25px;">
                 <div class="toilet_mark"></div>
@@ -173,17 +175,20 @@
                 100: '혼잡'
             };
 
-            let percentage = 1;
+            var percentage = 1;
+            var scode = 1;
 
             try {
-                const response = await fetch("/get_ratio_code");
+                const response = await fetch("/detection_data_feed");
                 const data = await response.json();
+                scode = data.ratio_code;
+                console.log("status code: " + scode);
 
                 if (data.error) {
                     percentage = 0;
                 } else {
                     // 전달받은 상태에 따라 퍼센티지 계산
-                    percentage = statusMap[data.message] || 2; // 상태가 없으면 2%
+                    percentage = statusMap[scode] || 2; // 상태가 없으면 2%
                 }
             } catch (error) {
                 console.error("Error fetching ratio data:", error);
