폰트 css 및 파비콘 업데이트
- 폰트 css의 잘못된 경로 수정됨
- 파비콘 추가

--- a/templates/count_view.html
+++ b/templates/count_view.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>People Counter and Area Ratio</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <title>count view</title>
     <style>
         body {
             font-family: Arial, sans-serif;
