--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
     <title>People Counter and Area Ratio</title>
     <style>
         body {
@@ -31,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>People Counter and Tracker</h1>
+    <h1>People Count Tracker and Area Ratio</h1>
     <div class="nav">
         <a href="/">HOME</a>
         <a href="/count_view">People Counter</a>
