--- a/templates/area_view.html
+++ b/templates/area_view.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Person Area Ratio</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <title>area view</title>
     <style>
         body {
             font-family: Arial, sans-serif;
