--- a/templates/map_view_info.html
+++ b/templates/map_view_info.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Pretendard&display=swap" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/map_view_info.css') }}" rel="stylesheet" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css') }}">
-    <title>map view info</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <title>모여봄 - demo map view info</title>
 </head>
 
 <body>
