동영상 탐지 페이지 추가

--- a/templates/area_view.html
+++ b/templates/area_view.html
@@ -38,6 +38,7 @@
         <a href="/count_view">People Counter</a>
         <a href="/area_view">Person Area Ratio</a>
         <a href="/map_view">demo map view</a>
+        <a href="/video_view">video view</a>
     </div>
     <div id="ratio-output">Loading...</div>
     <img id="area-feed" class="video-feed" src="/area_feed" alt="Area feed">
