--- a/templates/count_view.html
+++ b/templates/count_view.html
@@ -38,6 +38,7 @@
         <a href="/count_view">People Counter</a>
         <a href="/area_view">Person Area Ratio</a>
         <a href="/map_view">demo map view</a>
+        <a href="/video_view">video view</a>
     </div>
     <div id="count-output">Loading...</div>
     <img id="live-feed" class="video-feed" src="/video_feed" alt="Live feed">
