--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
         <a href="/count_view">People Counter</a>
         <a href="/area_view">Person Area Ratio</a>
         <a href="/map_view">demo map view</a>
+        <a href="/video_view">video view</a>
     </div>
     <script>
         async function fetchRatioData() {
