--- a/templates/video_view.html
+++ b/templates/video_view.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <title>Video Detection</title>
     <style>
         body {
@@ -17,18 +19,6 @@
             height: auto;
             margin: 20px auto;
         }
-        .nav {
-            margin-bottom: 20px;
-        }
-        .nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
-        .nav a:hover {
-            text-decoration: underline;
-        }
         select#videoDropdown {
             padding: 10px;
             font-size: 16px;
@@ -41,13 +31,7 @@
 </head>
 <body>
     <h1>Video Detection</h1>
-    <div class="nav">
-        <a href="/">HOME</a>
-        <a href="/count_view">People Counter</a>
-        <a href="/area_view">Person Area Ratio</a>
-        <a href="/map_view">demo map view</a>
-        <a href="/video_view">video view</a>
-    </div>
+    {% include '_nav.html' %}
     <div>
         <h3>Select a Video</h3>
         <select id="videoDropdown">
